Fix a few things, do text similarity on endpoints