@@ -1,8 +1,10 @@
 package io.sentrius.agent.services;
 
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import io.sentrius.sso.core.dto.capabilities.EndpointDescriptor;
@@ -28,35 +30,50 @@ public class EndpointSearcher {
         this.endpointRegistry = endpointRegistry;
     }
 
-    public List<EndpointDescriptor> getEndpointsLike(TokenDTO dto, String query)
-        throws ZtatException, JsonProcessingException {
-        float[] queryVector = embeddingService.embed(dto, query);
-
-        List<EndpointDescriptor> endpoints = endpointRegistry.getAllEndpoints();
-        return endpoints.stream()
-            .map(ed -> {
-                var embed = endpointRegistry.getEmbedding(ed);
-                if (embed.isEmpty()) {
-                    log.warn("No embedding found for endpoint: {}", ed.getName());
-                    return Map.entry(ed, 0.0f);
-                }
-
-                    var arr = embed.get();
-                log.info("Scoring {} | Query first5={} | Endpoint first5={}",
-                    ed.getName(),
-                    Arrays.toString(Arrays.copyOfRange(queryVector, 0, 5)),
-                    Arrays.toString(Arrays.copyOfRange(arr, 0, 5)));
-                var score = CosineSimilarity.score(queryVector,
-                    embed.orElseThrow(() -> new RuntimeException("Embedding not found for " +
-                        "endpoint: " + ed.getName())));
-                    log.info("Calculating similarity for endpoint: {} and {} {} ", ed.getName(), embed.get().length,
-                        score);
-                return Map.entry(ed, score);
-            }
-            )
-            .sorted((a, b) -> Float.compare(b.getValue(), a.getValue()))
-            .filter(entry -> entry.getValue() > 0.75) // adjust threshold as needed
-            .map(Map.Entry::getKey)
-            .collect(Collectors.toList());
+    private List<String> tokenize(String text) {
+        if (text == null) return List.of();
+        return Arrays.stream(text.toLowerCase()
+                .replaceAll("[^a-z0-9 ]", " ") // keep alphanumeric
+                .split("\\s+"))
+            .filter(s -> !s.isBlank())
+            .toList();
     }
+
+    private double jaccard(List<String> a, List<String> b) {
+        if (a.isEmpty() || b.isEmpty()) return 0.0;
+
+        Set<String> setA = new HashSet<>(a);
+        Set<String> setB = new HashSet<>(b);
+
+        Set<String> intersection = new HashSet<>(setA);
+        intersection.retainAll(setB);
+
+        Set<String> union = new HashSet<>(setA);
+        union.addAll(setB);
+
+        return (double) intersection.size() / union.size();
+    }
+
+    public List<EndpointDescriptor> getEndpointsLike(TokenDTO dto, String query) throws Exception, ZtatException {
+        float[] queryVector = embeddingService.embed(dto, query);
+        List<String> queryTokens = tokenize(query);
+
+        return endpointRegistry.getAllEndpoints().stream()
+            .map(ed -> {
+                var embedOpt = endpointRegistry.getEmbedding(ed);
+                if (embedOpt.isEmpty()) return Map.entry(ed, 0.0);
+
+                float cosine = CosineSimilarity.score(queryVector, embedOpt.get());
+
+                double lexical = jaccard(queryTokens, tokenize(ed.getDescription()));
+                double hybridScore = (0.7 * cosine) + (0.3 * lexical);
+
+                return Map.entry(ed, hybridScore);
+            })
+            .sorted((a, b) -> Double.compare(b.getValue(), a.getValue()))
+            .limit(10) // keep top 10
+            .map(Map.Entry::getKey)
+            .toList();
+    }
+
 }
